scrollbar in metadata/graphs fixed

--- a/tethysapp/water_data_explorer/public/css/main.css
+++ b/tethysapp/water_data_explorer/public/css/main.css
@@ -250,7 +250,7 @@ tr:hover {
   width: 100%;
   height: 100%;
   display: none;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 #options {
@@ -652,9 +652,10 @@ tr:hover {
   margin: auto;
 }
 
-/* #table_div {
+#table_div {
+  height: 300px;
   overflow-y: scroll;
-} */
+}
 
 .loading_id {
   display: flex;
